# Research

./: .gitignore  info.md  papers.md  pyproject.toml  requirements.txt  sensors.py  startup.md
data/: GermanyMap.csv  GermanyUrls.csv  PolandUrls.csv
data/maps/: PolandMap.csv
presentation/: Research.pptx
scripts/: getinfoPM.py
src/: sensors.py  show_sensors.py
src/research/: __init__.py  graph.py  knn_network.py  map.html  min_distance_network.py  node.py  sensors.py  show_sensors.py  utils.py
