[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geodatasets>=2026.5.0",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "shapely>=2.1.2",
]
