[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geodatasets>=2026.5.0",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.2",
    "folium>=0.14.0"
]

[project.scripts]
research = "research:main"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"
